# rust-rhythm-game

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  index.html
.fleet/: run.json
.github/workflows/: deployment.yml
assets/: background.wgsl
assets/songs/: territory.toml
src/: arrows.rs  audio.rs  background.rs  client.rs  consts.rs  main.rs  menu.rs  score.rs  time.rs  types.rs  ui.rs
web/: index.html  robots.txt  sitemap-0.xml  sitemap.xml
