[package]
name = "rust-rhythm-game"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Quentin Piot"]
readme = "README.md"
repository = "https://github.com/Quentin-Piot/rust-platform-game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1" }
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"

[profile.release]
lto = "thin"

